fix(docs): add missing border on table

--- a/.vuepress/theme/styles/layout/docs.scss
+++ b/.vuepress/theme/styles/layout/docs.scss
@@ -28,4 +28,8 @@ main.docs {
     h6, .h6 {
         padding-top: 0.5rem;
     }
+
+    table.table {
+        background-color: $white;
+    }
 }
